src/test/deca/syntax/parser/invalid/decl_var_type_symbole_exclamation.deca
// Parser test, type unavailable (!)

{
    ! x = 5;
}